--- a/Test/Analyze.html
+++ b/Test/Analyze.html
@@ -4,8 +4,12 @@
   <title>File Analyzer</title>
   <script src="json2.js"></script>
   <script>
+    //命名規則　Class:アッパーキャメルケース(先頭大文字)
+    //命名規則　関数:ローワーキャメルケース(動詞(先頭小文字)＋目的語(先頭大文字))
+    //命名規則　変数:スネークケース(小文字_小文字)
+
     // 独自定義関数----------------------------------------
-    function Analyze(string_data) {
+    function analyzeStringLine(string_data) {
       var dictionary_data = {};
       //if (string_data.includes("WF_EVENT arrive")) {
       if (string_data.indexOf("WF_EVENT arrive") !== -1) {//IE9対策
@@ -14,7 +18,7 @@
       }
       return dictionary_data;
     }
-    function StringToAnalyzeData(string_data,browser_IE){
+    function analyzeStingLines(string_data,browser_IE){
       //List化
       var lines = string_data.split('\r\n');
       var result_list = [];
@@ -25,12 +29,12 @@
          line = browser_IE? line.replace(/^\s+|\s+$/g, ''): line.trim();
 
          //解析しDictionary Data化
-         var result = Analyze(line);
+         var result = analyzeStringLine(line);
          //解析Dataが有ればListに加える。
-         //var data_exist = browser_IE? !IsObjectEmpty(result) :Object.keys(result).length;
+         //var data_exist = browser_IE? !isObjectEmpty(result) :Object.keys(result).length;
          //if (data_exist) {//条件式を変数で受けると動作が遅くなった。
-         //if(IsObjectExist(result,browser_IE)){//複数browserを立ち上げると遅い。
-         if (browser_IE? !IsObjectEmpty(result) :Object.keys(result).length){//速度はOK。3項演算子使うのは微妙
+         //if(isObjectExist(result,browser_IE)){//複数browserを立ち上げると遅い。
+         if (browser_IE? !isObjectEmpty(result) :Object.keys(result).length){//速度はOK。3項演算子使うのは微妙
             result.row = i + 1;
             result_list.push(result);
          }
@@ -39,15 +43,15 @@
     }
 
     // Process管理関数----------------------------------------
-    function HandleFileSelect() {
-      if (BrowserType() == "Internet Explorer"){
-        ProcessIE();
+    function handleFileSelect() {
+      if (getBrowserType() == "Internet Explorer"){
+        executeProcessIE();
       } else {
-        Process();
+        executeProcess();
       }
     }
 
-    function Process() {
+    function executeProcess() {
       //File読込
       var file_input = document.getElementById('FileInput');
       var file = file_input.files[0];
@@ -56,18 +60,18 @@
       reader.onload = function(e) {
         var file_content = e.target.result;
         //FileData処理
-        var analyzed_data = StringToAnalyzeData(file_content,false);
+        var analyzed_data = analyzeStingLines(file_content,false);
         //JSON Data化
         var json_result = analyzed_data.map(function(data) {
           return JSON.stringify(data);
         }).join('\n');
         //File保存
-        SaveToFile(file.name + '.json', json_result);
+        saveToFile(file.name + '.json', json_result);
 
         // ブラウザに表示
         var json_lines = json_result.split('\n');
         // json_lines = json_lines.slice(0, 3);
-        DisplayArray(json_lines,"Display",true);
+        displayArray(json_lines,"display",true);
       };
 
       reader.readAsText(file);
@@ -78,7 +82,7 @@
     //・置換え:FileReader→ActiveXObject("Scripting.FileSystemObject")
     //・置換え:string_data.includes(string)→string_data.indexOf(stirng) !== -1
     //・window.navigator.userAgent.toLowerCase();→agent = window.navigator.userAgent; agent.toLowerCase();
-    function ProcessIE() {
+    function executeProcessIE() {
       //File読込
       var file_input = document.getElementById('FileInput');
       var file = file_input.value;
@@ -88,21 +92,21 @@
       file_stream.Close();
       
       //FileData処理
-      var analyzed_data = StringToAnalyzeData(file_content,true);
+      var analyzed_data = analyzeStingLines(file_content,true);
       //JSON Data化
       var json_result = '';
       for (var j = 0; j < analyzed_data.length; j++) {
-        json_result += DictionaryToJSON(analyzed_data[j]) + '\r\n';
+        json_result += convertDictionaryToJSON(analyzed_data[j]) + '\r\n';
       }
       //File保存
 
-      SaveToFileIE(file + '.json', json_result);
+      saveToFileIE(file + '.json', json_result);
       //IEはDownload出来ないので保存場所を表示する。
-      DisplayLink(file + '.json', file + '.json', 'body', false);
+      displayLink(file + '.json', file + '.json', 'body', false);
       // ブラウザに表示
       var json_lines = json_result.split('\n');
       // json_lines = json_lines.slice(0, 3);
-      DisplayArray(json_lines, 'Display', true);
+      displayArray(json_lines, 'display', true);
     }
 
 
@@ -125,7 +129,7 @@
     }
     //汎用関数----------------------------------------
     // オブジェクトが空かどうかをチェックする関数
-    function IsObjectEmpty(obj) {
+    function isObjectEmpty(obj) {
       for (var key in obj) {
          if (obj.hasOwnProperty(key)) {
            return false;
@@ -133,7 +137,7 @@
       }
       return true;
     }
-    function IsObjectExist(obj,browser_IE) {
+    function isObjectExist(obj,browser_IE) {
       if(browser_IE){
         for (var key in obj) {
            if (obj.hasOwnProperty(key)) {
@@ -146,7 +150,7 @@
      }
     }
     // 辞書のJSON文字列化関数
-    function DictionaryToJSON(obj) {
+    function convertDictionaryToJSON(obj) {
       var json_string = '{';
       var is_first_property = true;
       for (var key in obj) {
@@ -162,24 +166,24 @@
       return json_string;
     }
     //文字列表示関数
-    function DisplayString(line, element , search_id ) {
+    function displayString(line, element , search_id ) {
       var display_element = search_id ? document.getElementById(element) : document.getElementsByTagName(element)[0];
       display_element.innerHTML = "<p>" + line + "</p>";
     }
     //文字列追記関数
-    function DisplayAddString(line, element , search_id ) {
+    function displayAddString(line, element , search_id ) {
       var display_element = search_id ? document.getElementById(element) : document.getElementsByTagName(element)[0];
       display_element.innerHTML += "<p>" + line + "</p>";
     }
     //文字列表示関数(配列の表示。配列を変更すればいいので追記の関数は用意しない。)
-    function DisplayArray(lines, element , search_id ) {
+    function displayArray(lines, element , search_id ) {
       var display_element = search_id ? document.getElementById(element) : document.getElementsByTagName(element)[0];
       var displayLines = lines.join('<br>');
       display_element.innerHTML = displayLines;
     }
 
     // リンク追記関数
-    function DisplayLink(path, label_text, element, search_id ) {
+    function displayLink(path, label_text, element, search_id ) {
       var display_element = search_id ? document.getElementById(element) : document.getElementsByTagName(element)[0];
       var link = document.createElement('a');
       link.href = path;
@@ -187,7 +191,7 @@
       display_element.appendChild(link);
     }
     //ブラウザ種類判別関数
-    function BrowserType(){
+    function getBrowserType(){
       var browser_type ="";
       if (navigator.appName === "Microsoft Internet Explorer" ) {
         return browser_type = "Internet Explorer";
@@ -212,7 +216,7 @@
       return browser_type;
     }
     // ファイル保存関数
-    function SaveToFile(fileName, content) {
+    function saveToFile(fileName, content) {
       var downloadLink = document.createElement('a');
       downloadLink.href = 'data:text/plain;charset=utf-8,' + encodeURIComponent(content);
       downloadLink.download = fileName;
@@ -222,7 +226,7 @@
       document.body.removeChild(downloadLink);
     }
     // ファイル保存関数(IE専用)
-    function SaveToFileIE(fileName, content) {
+    function saveToFileIE(fileName, content) {
       var file_system = new ActiveXObject("Scripting.FileSystemObject");
       var file_stream = file_system.CreateTextFile(fileName, true);
       file_stream.Write(content);
@@ -236,10 +240,10 @@
   <a>InternetExplorerで実行する場合はjson2.jsを同じFolderに置いて実行してください。</a><br>
   <a href="https://cdnjs.cloudflare.com/ajax/libs/json2/20160511/json2.js">https://cdnjs.cloudflare.com/ajax/libs/json2/20160511/json2.js</a>
   <br>
-  <input type="File" id="FileInput" />
-  <button onclick="HandleFileSelect()">Read</button>
+  <input type="file" id="FileInput" />
+  <button onclick="handleFileSelect()">Read</button>
   <br>
-  <div id="Display"></div>
+  <div id="display"></div>
   <br>
 </body>
 </html>
