--- a/index.html
+++ b/index.html
@@ -1,61 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>ファイルエディタ</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTMLファイル一覧</title>
 </head>
 <body>
-    <h1>ファイルエディタ</h1>
-    
-    <!-- ファイル選択ボタン -->
-    <input type="file" id="file-input" accept=".txt">
-    <br><br>
-
-    <!-- ファイル内容の表示と編集 -->
-    <textarea id="file-content" rows="10" cols="40" readonly></textarea>
-    <br><br>
-    <button onclick="editFile()">編集</button>
-    <br><br>
-    <button onclick="saveFile()">保存</button>
+    <h1>HTMLファイル一覧</h1>
+    <ul id="fileList">
+        <!-- ファイルリストがここに表示されます -->
+    </ul>
 
     <script>
-        var selectedFile = null;
+        // GitHub リポジトリの URL
+        const repoURL = 'https://github.com/kouzimiso/study/tree/main/Test';
 
-        // ファイル選択時の処理
-        document.getElementById("file-input").addEventListener("change", function(event) {
-            selectedFile = event.target.files[0];
+        // HTMLファイル一覧を取得してリストに追加する関数
+        async function listHTMLFiles() {
+            const response = await fetch(`${repoURL}?json=1`);
+            const data = await response.json();
+            const fileList = document.getElementById('fileList');
 
-            // ファイルの内容を読み取り、エディットボックスに表示
-            if (selectedFile) {
-                var reader = new FileReader();
-                reader.onload = function(e) {
-                    document.getElementById("file-content").value = e.target.result;
-                };
-                reader.readAsText(selectedFile);
-            }
-        });
-
-        // 編集ボタンをクリックしたときの処理
-        function editFile() {
-            document.getElementById("file-content").readOnly = false;
+            data.tree.forEach(item => {
+                if (item.type === 'blob' && item.path.endsWith('.html')) {
+                    const listItem = document.createElement('li');
+                    const link = document.createElement('a');
+                    link.href = `${repoURL}/${item.path}`;
+                    link.textContent = item.path.split('/').pop();
+                    listItem.appendChild(link);
+                    fileList.appendChild(listItem);
+                }
+            });
         }
 
-        // 保存ボタンをクリックしたときの処理
-        function saveFile() {
-            if (selectedFile) {
-                var editedContent = document.getElementById("file-content").value;
-
-                // ファイルに書き込み
-                var blob = new Blob([editedContent], { type: "text/plain" });
-                var url = window.URL.createObjectURL(blob);
-                var a = document.createElement("a");
-                a.href = url;
-                a.download = selectedFile.name;
-                a.click();
-                window.URL.revokeObjectURL(url);
-
-                document.getElementById("file-content").readOnly = true;
-            }
-        }
+        // ページが読み込まれたときに HTML ファイル一覧を表示
+        window.addEventListener('load', listHTMLFiles);
     </script>
 </body>
 </html>
